adding some debug info to prep_data

--- a/spec_viewers.ipynb
+++ b/spec_viewers.ipynb
@@ -50,12 +50,16 @@
     "jwst_sources = [227, 482, 546, 1186]\n",
     "#selected_src = jwst_sources[np.random.randint(0,3)]\n",
     "\n",
+    "@out.capture()\n",
     "def prep_data(source):\n",
     "    ''' prepare test data '''\n",
     "    path = os.getenv(\"JWST_VOILA_TEST_DATA\", os.path.abspath(os.curdir))\n",
     "    path1d = os.path.join(path, 'jwst_level3_NIRSpec/jw95065_{0}_nrs_msaspec_barshadow_x1d.fits'.format(source))\n",
     "    path2d = os.path.join(path, 'jwst_level3_NIRSpec/jw95065_{0}_nrs_msaspec_barshadow_s2d.fits'.format(source))\n",
     "    pathimg = os.path.join(path, 'jwst_level3_NIRSpec/cutouts/SOURCEID_{0}.fits'.format(source))\n",
+    "    print('local data path', path)\n",
+    "    print('local 1d path', path1d)\n",
+    "    print('local img path', pathimg)\n",
     "    hdu1d = fits.open(path1d)\n",
     "    hdu2d = fits.open(path2d)\n",
     "    cut = fits.open(pathimg)\n",
@@ -368,7 +372,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.1"
+   "version": "3.7.2"
   }
  },
  "nbformat": 4,
