--- a/specviz.ipynb
+++ b/specviz.ipynb
@@ -2,46 +2,45 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/bcherinka/Work/git/stsci/glue/glue/external/echo/__init__.py:3: UserWarning: glue.external.echo is deprecated, import from echo directly instead\n",
+      "  warnings.warn('glue.external.echo is deprecated, import from echo directly instead')\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import ipyvuetify as v\n",
     "from astropy.utils.data import download_file\n",
     "import ipywidgets as widgets\n",
     "import traitlets\n",
-    "from jdaviz.app import Application"
+    "from jdaviz.app import Application\n",
+    "from jdaviz.core.config import get_configuration\n",
+    "from jdaviz.core.data_formats import get_valid_format\n",
+    "from jdaviz import SpecViz, CubeViz"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d4da6d676ebe4b649ee6169bca16cdcb",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Application(components={'g-viewer-tab': '<template>\\n  <component v-bind:is=\"stack.container\">\\n    <g-viewer-…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "execution_count": 2,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
    "source": [
-    "app = Application(configuration='specviz')\n",
-    "app"
+    "# app = Application(configuration='default')\n",
+    "# app"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
@@ -54,24 +53,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "317e16219d7743b59a2847ec62c6df11",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Output()"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# this is a widget for debugging\n",
     "out = widgets.Output()\n",
@@ -81,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,21 +74,243 @@
     "#selected_src = jwst_sources[np.random.randint(0,3)]\n",
     "\n",
     "@out.capture()\n",
-    "def prep_data(source):\n",
-    "    ''' prepare test data '''\n",
-    "    path = os.getenv(\"JWST_VOILA_TEST_DATA\", os.path.abspath(os.curdir))\n",
-    "    path1d = os.path.join(path, 'jwst_level3_NIRSpec/jw95065_{0}_nrs_msaspec_barshadow_x1d.fits'.format(source))\n",
-    "    path2d = os.path.join(path, 'jwst_level3_NIRSpec/jw95065_{0}_nrs_msaspec_barshadow_s2d.fits'.format(source))\n",
-    "    pathimg = os.path.join(path, 'jwst_level3_NIRSpec/cutouts/SOURCEID_{0}.fits'.format(source))\n",
-    "    print('local data path', path)\n",
-    "    print('local 1d path', path1d)\n",
+    "def prep_data(source, stype=None):\n",
+    "    ''' prepare local test data '''\n",
+    "    \n",
+    "    #path = os.getenv(\"JWST_VOILA_TEST_DATA\", os.path.abspath(os.curdir))\n",
+    "    #path1d = os.path.join(path, 'jwst_level3_NIRSpec/jw95065_{0}_nrs_msaspec_barshadow_x1d.fits'.format(source))\n",
+    "    #path2d = os.path.join(path, 'jwst_level3_NIRSpec/jw95065_{0}_nrs_msaspec_barshadow_s2d.fits'.format(source))\n",
+    "    #pathimg = os.path.join(path, 'jwst_level3_NIRSpec/cutouts/SOURCEID_{0}.fits'.format(source))    \n",
+    "\n",
+    "    path1d = '/Users/bcherinka/Work/jwst/test/jw00626-o030_s00000_nirspec_f170lp-g235m_x1d.fits'\n",
+    "    path2d = '/Users/bcherinka/Work/jwst/test/jw00626-o030_s00000_nirspec_f170lp-g235m_s2d.fits'\n",
+    "    path3d = '/Users/bcherinka/Work/jwst/test/single_nrs1-nrs2_g395h-f290lp_s3d.fits'\n",
+    "\n",
+    "    #print('local data path', path)\n",
+    "    #print('local 1d path', path1d)\n",
     "    #print('local img path', pathimg)\n",
-    "    return path1d"
+    "    \n",
+    "    if stype == '3d':\n",
+    "        return path3d\n",
+    "    elif stype == '1d':\n",
+    "        return path1d\n",
+    "    elif stype == '2d':\n",
+    "        return path2d\n",
+    "    else:\n",
+    "        return path1d"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_file_from_target_name(name):\n",
+    "    ''' this function looks up the filename based on a target id/coord, etc \n",
+    "    \n",
+    "    If the query parameter sent from the Portral is a target name or coordinate, we need to look it up \n",
+    "    using Astroquery and retrieve the relevant datafile URI.  If the query parameter is a datafile URI, then we can \n",
+    "    pass that directly to JDAViz.\n",
+    "    \n",
+    "    This function should be moved into the ASB back-end. It should determine the data URI, pass it back to the\n",
+    "    front-end so Vue can send it this notebook.  The notebook (or the Application), should contain the logic\n",
+    "    to parse the data URL and determine the configuration and default data to load.\n",
+    "    \n",
+    "    Pseudo-code:\n",
+    "    if name.endswith('.fits'):\n",
+    "        return name\n",
+    "    else:\n",
+    "        return get_dataURI_from_astroquery(name)\n",
+    "    \n",
+    "    This is a toy hack to \"get\" the filename, or data URI.  Everything is local.  \n",
+    "    '''\n",
+    "    if name == 1111:\n",
+    "       # fake target id for a data cube\n",
+    "       datafile = prep_data(name, stype='3d')\n",
+    "    elif name == 482:\n",
+    "        datafile = prep_data(name, stype='2d')\n",
+    "    else:\n",
+    "        datafile = prep_data(name, stype='1d')\n",
+    "    return datafile"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def determine_input_from_file(path):\n",
+    "    ''' this function determines the input data based on filename\n",
+    "    \n",
+    "    It should determine the type of application configuration to use and which data extension to load\n",
+    "    by default. \n",
+    "    \n",
+    "    '''\n",
+    "\n",
+    "    import specutils.io.default_loaders.jwst_reader as jw\n",
+    "\n",
+    "    # custom mast configuration\n",
+    "    mastconfig = {'settings': {'configuration': 'mastviz', 'viewer_spec': '',\n",
+    "      'visible': {'menu_bar': False,\n",
+    "       'toolbar': False,\n",
+    "       'tray': False,\n",
+    "       'tab_headers': False},\n",
+    "      'context': {'notebook': {'max_height': '600px'}}},\n",
+    "     'toolbar': ['g-subset-tools', 'g-unified-slider'],\n",
+    "     'tray': ['g-gaussian-smooth', 'g-collapse'],\n",
+    "     'viewer_area': []}    \n",
+    "    \n",
+    "    \n",
+    "    #if path.endswith('_s3d.fits'):\n",
+    "    if jw.identify_jwst_s3d_fits(None, path):\n",
+    "        #return 'cubeviz'\n",
+    "        varea = get_configuration('cubeviz', section='viewer_area')\n",
+    "        mastconfig['settings']['viewer_spec']='cubeviz'\n",
+    "    elif jw.identify_jwst_x1d_fits(None, path):\n",
+    "    #elif path.endswith(('_x1d.fits','_x1dints.fits','_c1d.fits')):\n",
+    "        #return 'specviz'\n",
+    "        varea = get_configuration('specviz', section='viewer_area')\n",
+    "        mastconfig['settings']['viewer_spec']='specviz'\n",
+    "    #elif path.endswith('_s2d.fits'):\n",
+    "    elif jw.identify_jwst_s2d_fits(None, path):\n",
+    "        # custom viewer configuration\n",
+    "        viewers = [{'name': 'Image', 'plot': 'g-image-viewer', 'reference': 'image-viewer'}]\n",
+    "        varea = [{'container': 'col', 'children': [{'container': 'row', 'viewers': viewers}]}]\n",
+    "        mastconfig['settings']['viewer_spec']='imviz'\n",
+    "        #mastconfig['viewer_area'] = viewer_area\n",
+    "        #return mastconfig\n",
+    "    else:\n",
+    "        # return 'default'\n",
+    "        varea = []\n",
+    "        mastconfig['settings']['viewer_spec']='default'\n",
+    "    \n",
+    "    #print('mastconfig', mastconfig)\n",
+    "    #print('varea', varea)\n",
+    "    mastconfig['viewer_area'] = varea\n",
+    "    #print('cfg', mastconfig)\n",
+    "    return mastconfig\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def determine_configuration(path):\n",
+    "    valid_format, config = get_valid_format(path)\n",
+    "\n",
+    "    # custom mast configuration    \n",
+    "    mastconfig = {\n",
+    "        'settings': {\n",
+    "            'configuration': 'mastviz', 'viewer_spec': '',\n",
+    "            'visible': {'menu_bar': False, \n",
+    "                        'toolbar': False,\n",
+    "                        'tray': False,\n",
+    "                        'tab_headers': False},\n",
+    "            'context': {'notebook': {'max_height': '600px'}}\n",
+    "        },\n",
+    "        'toolbar': ['g-subset-tools'],\n",
+    "        'tray': ['g-gaussian-smooth'],\n",
+    "        'viewer_area': []\n",
+    "    }\n",
+    "    \n",
+    "    if valid_format == 'JWST s3d':\n",
+    "        # access cubeviz config\n",
+    "        cube_config = get_configuration('cubeviz')\n",
+    "        # re-add the data parser settings\n",
+    "        data = cube_config['settings']['data']\n",
+    "        mastconfig['settings']['data'] = data\n",
+    "        # re-add the cube toolbar but remove the g-data-tools\n",
+    "        tools = cube_config['toolbar']\n",
+    "        tools.remove('g-data-tools')\n",
+    "        mastconfig['toolbar'] = tools\n",
+    "        # re-add the tray \n",
+    "        mastconfig['tray'] = cube_config['tray']\n",
+    "        # get the viewer area for cubeviz\n",
+    "        varea = cube_config['viewer_area']\n",
+    "        mastconfig['settings']['viewer_spec']='cubeviz'\n",
+    "    elif valid_format == 'JWST x1d':\n",
+    "        # get the viewer area for specviz\n",
+    "        varea = get_configuration('specviz', section='viewer_area')\n",
+    "        mastconfig['settings']['viewer_spec']='specviz'\n",
+    "    elif valid_format == 'JWST s2d':\n",
+    "        # define a custom viewer area\n",
+    "        viewers = [{'name': 'Image', 'plot': 'g-image-viewer', 'reference': 'image-viewer'}]\n",
+    "        varea = [{'container': 'col', 'children': [{'container': 'row', 'viewers': viewers}]}]\n",
+    "        mastconfig['settings']['viewer_spec']='imviz'\n",
+    "    else:\n",
+    "        varea = []\n",
+    "        mastconfig['settings']['viewer_spec']='default'\n",
+    "\n",
+    "    mastconfig['viewer_area'] = varea\n",
+    "    return mastconfig"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def load_default_data(app, config, datafile):\n",
+    "    ''' this should load default data based on configuration and input datafile '''\n",
+    "    if config['settings'].get('viewer_spec', '') == 'cubeviz':\n",
+    "        #app.add_data_to_viewer('flux-viewer', datafile, ext='SCI')\n",
+    "        #app.add_data_to_viewer('uncert-viewer', datafile, ext='ERR')\n",
+    "        #app.add_data_to_viewer('mask-viewer', datafile, ext='DQ')\n",
+    "        #app.add_data_to_viewer('spectrum-viewer', datafile, ext='SCI')\n",
+    "        pass\n",
+    "    elif config['settings'].get('viewer_spec', '') == 'specviz':\n",
+    "        #app.add_data_to_viewer('spectrum-viewer', datafile, ext='EXTRACT1D')\n",
+    "        pass\n",
+    "    elif config['settings'].get('viewer_spec', '') == 'imviz':\n",
+    "        app.add_data_to_viewer('image-viewer', datafile, ext='SCI')\n",
+    "    else:\n",
+    "        pass\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def reconfigure_application(config):\n",
+    "    app.reset_configuration()\n",
+    "    app.load_configuration(config)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def create_app(config):\n",
+    "    app = Application(configuration=config)\n",
+    "    if config['settings'].get('viewer_spec', '') == 'cubeviz':\n",
+    "        # replace with helper = CubeViz()\n",
+    "        helper = app\n",
+    "    elif config['settings'].get('viewer_spec', '') == 'specviz':\n",
+    "        helper = SpecViz(app)\n",
+    "        #app = helper.app\n",
+    "        #app.reset_configuration()\n",
+    "        #app.load_configuration(config)\n",
+    "    elif config['settings'].get('viewer_spec', '') == 'imviz':\n",
+    "        #app = Application(configuration=config)\n",
+    "        helper = app\n",
+    "    else:\n",
+    "        #app = Application(configuration=config)\n",
+    "        helper = app\n",
+    "    return app, helper"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,20 +319,39 @@
     "    # get new data from selected target\n",
     "    selected_src = int(data)\n",
     "    print('selected_src', selected_src)\n",
-    "    #data = '/Users/bcherinka/Work/notebooks/datb/manga-7495-12704-LOGCUBE.fits'\n",
-    "    data = prep_data(selected_src)\n",
-    "    app.load_data(data)"
+    "    # old\n",
+    "#     #data = '/Users/bcherinka/Work/notebooks/datb/manga-7495-12704-LOGCUBE.fits'\n",
+    "#     data1d, data2d = prep_data(selected_src)\n",
+    "#     d1 = data1d.rsplit('/',1)[-1].split('.fits')[0]+'[EXTRACT1D]'\n",
+    "#     d2 = data2d.rsplit('/',1)[-1].split('.fits')[0]+'[SCI]'\n",
+    "#     print('1d', data1d, d1)\n",
+    "#     print('2d', data2d, d2)\n",
+    "#     app.load_data(data1d)\n",
+    "#     app.load_data(data2d)\n",
+    "#     app.add_data_to_viewer('image-viewer', d2)\n",
+    "#     app.add_data_to_viewer('spectrum-viewer', d1)\n",
+    "\n",
+    "    datafile = get_file_from_target_name(selected_src)\n",
+    "    #config = determine_input_from_file(datafile)\n",
+    "    config = determine_configuration(datafile)\n",
+    "    #reconfigure_application(config)\n",
+    "    app, helper = create_app(config)\n",
+    "    helper.load_data(datafile)\n",
+    "    load_default_data(app, config, datafile)\n",
+    "    col.children = [app]\n",
+    "\n",
+    "    \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "col = v.Col(xs12=True, lg6=True, xl4=True, children=[app])\n",
-    "row = v.Row(_metadata={'mount_id': 'specviz'}, dense=True, row=True, wrap=True, align_center=True, children=[col])\n",
-    "row.on_event('change', update_data_handler)"
+    "# col = v.Col(xs12=True, lg6=True, xl4=True, children=[app])\n",
+    "# row = v.Row(_metadata={'mount_id': 'specviz'}, dense=True, row=True, wrap=True, align_center=True, children=[col])\n",
+    "# row.on_event('change', update_data_handler)"
    ]
   },
   {
@@ -134,14 +359,11 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "col = v.Col(_metadata={'mount_id': 'specviz'}, cols=\"9\", children=[\"Loading...\"])\n",
+    "#row = v.Row(_metadata={'mount_id': 'specviz'}, dense=True, row=True, wrap=True, align_center=True, children=[col])\n",
+    "col.on_event('change', update_data_handler)"
+   ]
   }
  ],
  "metadata": {
