--- a/specviz.ipynb
+++ b/specviz.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/bcherinka/Work/git/stsci/glue/glue/external/echo/__init__.py:3: UserWarning: glue.external.echo is deprecated, import from echo directly instead\n",
-      "  warnings.warn('glue.external.echo is deprecated, import from echo directly instead')\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "import ipyvuetify as v\n",
@@ -28,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "scrolled": false
    },
@@ -82,9 +73,10 @@
     "    #path2d = os.path.join(path, 'jwst_level3_NIRSpec/jw95065_{0}_nrs_msaspec_barshadow_s2d.fits'.format(source))\n",
     "    #pathimg = os.path.join(path, 'jwst_level3_NIRSpec/cutouts/SOURCEID_{0}.fits'.format(source))    \n",
     "\n",
-    "    path1d = '/Users/bcherinka/Work/jwst/test/jw00626-o030_s00000_nirspec_f170lp-g235m_x1d.fits'\n",
-    "    path2d = '/Users/bcherinka/Work/jwst/test/jw00626-o030_s00000_nirspec_f170lp-g235m_s2d.fits'\n",
-    "    path3d = '/Users/bcherinka/Work/jwst/test/single_nrs1-nrs2_g395h-f290lp_s3d.fits'\n",
+    "    path = os.getenv(\"JWST_VOILA_SPECVIZ_DATA\", os.path.abspath(os.curdir))\n",
+    "    path1d = os.path.join(path,'jw00626-o030_s00000_nirspec_f170lp-g235m_x1d.fits')\n",
+    "    path2d = os.path.join(path, 'jw00626-o030_s00000_nirspec_f170lp-g235m_s2d.fits')\n",
+    "    path3d = os.path.join(path, 'single_nrs1-nrs2_g395h-f290lp_s3d.fits')\n",
     "\n",
     "    #print('local data path', path)\n",
     "    #print('local 1d path', path1d)\n",
