switching specviz notebook from fake target to data uri

--- a/specviz.ipynb
+++ b/specviz.ipynb
@@ -14,6 +14,7 @@
     "from jdaviz.app import Application\n",
     "from jdaviz.core.config import get_configuration\n",
     "from jdaviz.core.data_formats import get_valid_format\n",
+    "#from specutils.io.registers import identify_spectrum_format\n",
     "from jdaviz import SpecViz, CubeViz"
    ]
   },
@@ -116,14 +117,19 @@
     "        return get_dataURI_from_astroquery(name)\n",
     "    \n",
     "    This is a toy hack to \"get\" the filename, or data URI.  Everything is local.  \n",
+    "    \n",
+    "    Changing this hack to use a data uri\n",
     "    '''\n",
-    "    if name == 1111:\n",
-    "       # fake target id for a data cube\n",
-    "       datafile = prep_data(name, stype='3d')\n",
-    "    elif name == 482:\n",
-    "        datafile = prep_data(name, stype='2d')\n",
-    "    else:\n",
-    "        datafile = prep_data(name, stype='1d')\n",
+    "#     if name == '3d':\n",
+    "#        # fake target id for a data cube\n",
+    "#        datafile = prep_data(name, stype='3d')\n",
+    "#     elif name == '2d':\n",
+    "#         datafile = prep_data(name, stype='2d')\n",
+    "#     elif name == '1d':\n",
+    "#         datafile = prep_data(name, stype='1d')\n",
+    "#     else:\n",
+    "#         datafile = prep_data(name, stype='1d')\n",
+    "    datafile = prep_data(name, stype=name)\n",
     "    return datafile"
    ]
   },
@@ -191,8 +197,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "default_file_to_config_mapping = {'JWST x1d': 'specviz', 'JWST s2d': 'imviz', 'JWST s3d': 'cubeviz', \n",
+    "                                  'MaNGA cube': 'cubeviz'}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def determine_configuration(path):\n",
     "    valid_format, config = get_valid_format(path)\n",
+    "#     valid_format = identify_spectrum_format(path)\n",
+    "#     if valid_format:\n",
+    "#         valid_format = valid_format[0] if len(valid_format) > 1 else valid_format\n",
+    "#         config = default_file_to_config_mapping.get(valid_format, None)\n",
     "\n",
     "    # custom mast configuration    \n",
     "    mastconfig = {\n",
@@ -226,8 +246,10 @@
     "        mastconfig['settings']['viewer_spec']='cubeviz'\n",
     "    elif valid_format == 'JWST x1d':\n",
     "        # get the viewer area for specviz\n",
-    "        varea = get_configuration('specviz', section='viewer_area')\n",
+    "        spec_config = get_configuration('specviz')\n",
+    "        varea = spec_config['viewer_area']\n",
     "        mastconfig['settings']['viewer_spec']='specviz'\n",
+    "        mastconfig['tray'] = spec_config['tray']\n",
     "    elif valid_format == 'JWST s2d':\n",
     "        # define a custom viewer area\n",
     "        viewers = [{'name': 'Image', 'plot': 'g-image-viewer', 'reference': 'image-viewer'}]\n",
@@ -308,20 +330,10 @@
    "source": [
     "@out.capture()\n",
     "def update_data_handler(widget, event, data):\n",
-    "    # get new data from selected target\n",
-    "    selected_src = int(data)\n",
+    "    # get new data from extracted data uri\n",
+    "    #selected_src = int(data)\n",
+    "    selected_src = data\n",
     "    print('selected_src', selected_src)\n",
-    "    # old\n",
-    "#     #data = '/Users/bcherinka/Work/notebooks/datb/manga-7495-12704-LOGCUBE.fits'\n",
-    "#     data1d, data2d = prep_data(selected_src)\n",
-    "#     d1 = data1d.rsplit('/',1)[-1].split('.fits')[0]+'[EXTRACT1D]'\n",
-    "#     d2 = data2d.rsplit('/',1)[-1].split('.fits')[0]+'[SCI]'\n",
-    "#     print('1d', data1d, d1)\n",
-    "#     print('2d', data2d, d2)\n",
-    "#     app.load_data(data1d)\n",
-    "#     app.load_data(data2d)\n",
-    "#     app.add_data_to_viewer('image-viewer', d2)\n",
-    "#     app.add_data_to_viewer('spectrum-viewer', d1)\n",
     "\n",
     "    datafile = get_file_from_target_name(selected_src)\n",
     "    #config = determine_input_from_file(datafile)\n",
@@ -354,7 +366,7 @@
    "source": [
     "col = v.Col(_metadata={'mount_id': 'specviz'}, cols=\"9\", children=[\"Loading...\"])\n",
     "#row = v.Row(_metadata={'mount_id': 'specviz'}, dense=True, row=True, wrap=True, align_center=True, children=[col])\n",
-    "col.on_event('change', update_data_handler)"
+    "col.on_event('load', update_data_handler)"
    ]
   }
  ],
